# discord_status_in_telegram

./: .gitignore  README.md  communication.py  config-EXAMPLE.ini  discord_requests.py  main.py  pyproject.toml
discord_status_in_telegram/: __main__.py  config-EXAMPLE.ini  configuration.py  discord_app.py  discord_client.py  logger_config.py  telegram_client.py
src/: app.py  main.py
src/external_requests/: discord_requests.py  telegram_requests.py
