[tool.poetry]
name = "discord-status-in-telegram"
version = "0.1.0"
description = "Project that allows to transmit status of Discord voice channels of the given Guild to Telegram group"
authors = ["Vladyslav Zlochevskyi <zlochvla@fel.cvut.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
flask = "^3.0.3"
requests = "^2.32.3"
python-telegram-bot = "^21.4"

[tool.poetry.scripts]
app = "discord_status_in_telegram.__main__:asyncmain"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
